--- a/src/main/resources/templates/error/custom_error.html
+++ b/src/main/resources/templates/error/custom_error.html
@@ -77,7 +77,7 @@
     <div class="error-title">حدث خطأ!</div>
     <p class="error-message" th:text="${errorMessage}">عذرًا، حدث خطأ غير متوقع. برجاء المحاولة لاحقًا.</p>
 
-    <a href="/" class="btn btn-primary">
+    <a href="/login" class="btn btn-primary">
         <i class="bi bi-arrow-right-circle"></i> الرجوع للصفحة الرئيسية
     </a>
 </div>
