--- a/src/main/resources/templates/doctor/clinic_settings.html
+++ b/src/main/resources/templates/doctor/clinic_settings.html
@@ -68,7 +68,7 @@
         <div class="mb-3">
             <label class="form-label"><i class="bi bi-cash-stack"></i> سعر الكشف</label>
             <input type="number" step="0.5" min="0" name="consultationPrice" class="form-control"
-                   th:value="${clinic.consultationPrice}" required>
+                   th:value="${clinic.checkUpPrice}" required>
         </div>
 
         <div class="mb-3">
