--- a/src/main/resources/templates/error/general.html
+++ b/src/main/resources/templates/error/general.html
@@ -41,7 +41,7 @@
     <i class="bi bi-exclamation-triangle-fill error-icon"></i>
     <h3 class="mt-3" th:text="${errorTitle}">حدث خطأ غير معروف</h3>
     <p class="text-muted mt-2" th:text="${errorMessage}"></p>
-    <a href="/" class="btn btn-secondary mt-3 btn-back">الرجوع للرئيسية</a>
+    <a href="/login" class="btn btn-secondary mt-3 btn-back">الرجوع للرئيسية</a>
 </div>
 
 </body>
